# ClawTheSpire

./: .dockerignore  .gitignore  ALPHAZERO_GUIDE.md  BETAONE_ROADMAP.md  BETAONE_ROLLOUT_PLAN.md  BETAONE_TIMELINE.md  EXPERIMENT_TIMELINE.md  FRONTIER.md  README.md  analyze_silent.py  encounter-report.py  launcher.html  play.sh  run-ab-test.sh  run.py  sts2_config.json
sts2-solver/: Dockerfile.worker  compare_gen30.sh  fill_eval_gaps.sh  overnight_benchmarks.sh  pyproject.toml  rerun_benchmarks.sh  tb_gen50_vs_60_eval.sh  tb_v2_final_sweep.sh  tb_v2_spike_trough_bench.sh  ucb_benchmarks.sh  validate_margin_scenarios.py
sts2-solver/companion-web/: README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
sts2-solver/docs/: distributed_ec2_workers.md  distributed_workers.md  eval_scenario_analysis.md  gpu_acceleration_plan.md  muzero_v1_plan.md
sts2-solver/scripts/: backfill_mcts_eval.py  benchmark_end_turn_mask.py  build_gamma_train_v1.py  build_label_pool.py  build_lean_decks_v2.py  build_uber_decks.py  build_worker_image.ps1  combat_eval_mcts.py  decknet_diagnostic.py  decknet_eval_trajectory.py  decknet_heuristic_eval.py  decknet_heuristic_rollout_eval.py  distill_benchmark.py  distill_c51.py  distill_c51_eval.py  distill_dagger.py  distill_generate.py  distill_ppo.py  distill_train.py  distill_transformer.py  docker_worker_entrypoint.py  ec2_worker_cloud_init.sh  eval_with_end_turn_mask.py  extend_uber_decks.py  finetune_with_labels.py  install_distributed_worker.ps1  merge_datasets.py  promote_to_frontier.py  refresh_cards_json.py  register_distill_experiment.py  run_local_workers.sh  sync_distill_progress.py
sts2-solver/sts2-engine/: Cargo.toml  pyproject.toml
sts2-solver/tests/: test_advisor.py  test_advisor_evals.py  test_alphazero.py  test_betaone_parity.py  test_bridge.py  test_combat_engine.py  (+11 more)
(+662 files in other folders)
