[package]
name = "sts2_engine"
version = "0.1.0"
edition = "2024"

[lib]
name = "sts2_engine"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.24", features = ["extension-module"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.9"
ort = "2.0.0-rc.12"
ndarray = "0.17"
